--- a/iOS Project/Day Start/Day Start/Base.lproj/Main.storyboard
+++ b/iOS Project/Day Start/Day Start/Base.lproj/Main.storyboard
@@ -51,57 +51,6 @@
                                     <segue destination="Bc3-yK-TCn" kind="embed" identifier="hourly" id="pcE-FM-0ZF"/>
                                 </connections>
                             </containerView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zph-7q-B0U">
-                                <rect key="frame" x="0.0" y="602" width="414" height="150"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zOO-QO-83v">
-                                    <size key="itemSize" width="120" height="130"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="10" minY="10" maxX="0.0" maxY="10"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="hourlyCell" id="dhD-AK-85u" customClass="HourlyCollectionViewCell" customModule="Day_Start" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="10" width="120" height="130"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PZF-2w-y0V">
-                                            <rect key="frame" x="0.0" y="0.0" width="120" height="130"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dpj-eB-iSH">
-                                                    <rect key="frame" x="30" y="33" width="51" height="47"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="영하4도" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWF-c3-U4i">
-                                                    <rect key="frame" x="30" y="88" width="55" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="18:51" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7P-Dw-fd5">
-                                                    <rect key="frame" x="37" y="8" width="41" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </collectionViewCellContentView>
-                                        <color key="backgroundColor" red="0.96187992249999998" green="0.64582062659999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <connections>
-                                            <outlet property="hourlyTemp" destination="uWF-c3-U4i" id="CMb-7W-PRS"/>
-                                            <outlet property="hourlyTime" destination="c7P-Dw-fd5" id="r38-1M-nWG"/>
-                                            <outlet property="hourlyWeatherImage" destination="Dpj-eB-iSH" id="hKu-vV-xgG"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="dwX-Ju-8On"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="I8P-iN-UDb"/>
-                                </connections>
-                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -119,7 +68,6 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Wheather" selectedImage="sun.min.fill" catalog="system" id="XuA-8P-OpF"/>
                     <connections>
-                        <outlet property="collection" destination="zph-7q-B0U" id="tFk-Ro-nGU"/>
                         <outlet property="hourlyContainerView" destination="Scy-ed-3sP" id="vmV-gI-bdF"/>
                     </connections>
                 </viewController>
@@ -257,33 +205,33 @@
                                             <rect key="frame" x="0.0" y="0.0" width="120" height="130"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GDr-T4-zeh">
-                                                    <rect key="frame" x="30" y="33" width="60" height="60"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="GDr-T4-zeh" secondAttribute="height" multiplier="1:1" id="Ee8-Pc-Pcb"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18:51" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mcq-ts-kaR">
                                                     <rect key="frame" x="39.5" y="8" width="41" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GDr-T4-zeh">
+                                                    <rect key="frame" x="35" y="33" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="lR5-RG-6K8"/>
+                                                        <constraint firstAttribute="width" constant="50" id="yrq-6l-3Ff"/>
+                                                    </constraints>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="영하4도" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZdR-8f-Nwv">
-                                                    <rect key="frame" x="32.5" y="98" width="55" height="21"/>
+                                                    <rect key="frame" x="32.5" y="93" width="55" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="ZdR-8f-Nwv" firstAttribute="top" secondItem="GDr-T4-zeh" secondAttribute="bottom" constant="10" id="026-53-hDt"/>
                                                 <constraint firstItem="mcq-ts-kaR" firstAttribute="centerX" secondItem="cJ1-Lp-Psb" secondAttribute="centerX" id="0bu-PC-mSq"/>
                                                 <constraint firstItem="mcq-ts-kaR" firstAttribute="top" secondItem="cJ1-Lp-Psb" secondAttribute="top" constant="8" id="3gJ-1C-cOc"/>
-                                                <constraint firstItem="GDr-T4-zeh" firstAttribute="top" secondItem="mcq-ts-kaR" secondAttribute="bottom" constant="4" id="HDw-TL-SoA"/>
-                                                <constraint firstItem="ZdR-8f-Nwv" firstAttribute="centerX" secondItem="cJ1-Lp-Psb" secondAttribute="centerX" id="I0t-yw-2aw"/>
-                                                <constraint firstAttribute="trailing" secondItem="GDr-T4-zeh" secondAttribute="trailing" constant="30" id="Mpj-sx-pwt"/>
-                                                <constraint firstItem="ZdR-8f-Nwv" firstAttribute="top" secondItem="GDr-T4-zeh" secondAttribute="bottom" constant="5" id="N1J-7C-CVv"/>
-                                                <constraint firstItem="GDr-T4-zeh" firstAttribute="leading" secondItem="cJ1-Lp-Psb" secondAttribute="leading" constant="30" id="sAN-R2-B2a"/>
+                                                <constraint firstItem="ZdR-8f-Nwv" firstAttribute="centerX" secondItem="cJ1-Lp-Psb" secondAttribute="centerX" id="D9G-mC-0dp"/>
+                                                <constraint firstItem="GDr-T4-zeh" firstAttribute="centerX" secondItem="cJ1-Lp-Psb" secondAttribute="centerX" id="FUn-1M-0U4"/>
+                                                <constraint firstItem="GDr-T4-zeh" firstAttribute="top" secondItem="mcq-ts-kaR" secondAttribute="bottom" constant="4" id="sbq-td-Tyi"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" red="0.96187992249999998" green="0.64582062659999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -295,14 +243,6 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ddw-Ag-Mj6">
-                                <rect key="frame" x="20" y="158" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="button:" destination="Bc3-yK-TCn" eventType="touchUpInside" id="7Zw-ZM-jWS"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0FB-qa-Qgy"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
