--- a/iOS Project/Day Start/Day Start/Base.lproj/Main.storyboard
+++ b/iOS Project/Day Start/Day Start/Base.lproj/Main.storyboard
@@ -51,18 +51,30 @@
                                     <segue destination="Bc3-yK-TCn" kind="embed" identifier="hourly" id="pcE-FM-0ZF"/>
                                 </connections>
                             </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRd-tG-j69">
+                                <rect key="frame" x="0.0" y="558" width="414" height="256"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="256" id="O9M-0t-xjG"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="iP5-xX-vWI" kind="embed" identifier="daily" id="How-VQ-CSN"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Udq-eL-xTz" firstAttribute="top" secondItem="gNb-pA-22F" secondAttribute="bottom" constant="35" id="1oN-Ss-3d2"/>
+                            <constraint firstItem="NRd-tG-j69" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="AHx-s0-fsu"/>
                             <constraint firstItem="Scy-ed-3sP" firstAttribute="top" secondItem="b2I-EL-Qv9" secondAttribute="bottom" constant="20" id="L2C-Zp-NZO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Scy-ed-3sP" secondAttribute="trailing" id="MwU-6Y-Y8p"/>
                             <constraint firstItem="Scy-ed-3sP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="N3d-Q8-KtE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NRd-tG-j69" secondAttribute="trailing" id="NOp-ff-x9y"/>
                             <constraint firstItem="b2I-EL-Qv9" firstAttribute="top" secondItem="Udq-eL-xTz" secondAttribute="bottom" constant="15" id="bRB-1h-rY0"/>
                             <constraint firstItem="gNb-pA-22F" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="bq2-TD-r5o"/>
                             <constraint firstItem="b2I-EL-Qv9" firstAttribute="centerX" secondItem="Udq-eL-xTz" secondAttribute="centerX" id="ePT-s3-clx"/>
                             <constraint firstItem="Udq-eL-xTz" firstAttribute="centerX" secondItem="gNb-pA-22F" secondAttribute="centerX" id="mQP-Oz-xjT"/>
+                            <constraint firstItem="NRd-tG-j69" firstAttribute="top" secondItem="Scy-ed-3sP" secondAttribute="bottom" id="mq6-e0-zU3"/>
                             <constraint firstItem="gNb-pA-22F" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="nno-5S-xpn"/>
                         </constraints>
                     </view>
@@ -234,7 +246,6 @@
                                                 <constraint firstItem="GDr-T4-zeh" firstAttribute="top" secondItem="mcq-ts-kaR" secondAttribute="bottom" constant="4" id="sbq-td-Tyi"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <color key="backgroundColor" red="0.96187992249999998" green="0.64582062659999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="hourlyTemp" destination="ZdR-8f-Nwv" id="eaG-sp-25N"/>
                                             <outlet property="hourlyTime" destination="mcq-ts-kaR" id="I1d-kK-pHN"/>
@@ -260,7 +271,7 @@
             <objects>
                 <viewController id="iP5-xX-vWI" customClass="DailyViewController" customModule="Day_Start" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BTm-v5-aaX">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="256"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3U1-6K-Ofc">
@@ -322,7 +333,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l2F-Ax-KEY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1188" y="1973"/>
+            <point key="canvasLocation" x="-499" y="1456"/>
         </scene>
         <!--Daily View Controller-->
         <scene sceneID="Krs-qE-3rA">
