SearchBar, Search TableView 기본 구성 및 메소드 구현 완료

--- a/iOS Project/Day Start/Day Start/Base.lproj/Main.storyboard
+++ b/iOS Project/Day Start/Day Start/Base.lproj/Main.storyboard
@@ -169,6 +169,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
+                        <segue destination="pdx-eQ-HhE" kind="relationship" relationship="viewControllers" id="h0I-j4-2Xz"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="lXY-wc-wHu"/>
                         <segue destination="U6c-Py-cuw" kind="relationship" relationship="viewControllers" id="0Ye-TF-djS"/>
                         <segue destination="lfq-RA-fJY" kind="relationship" relationship="viewControllers" id="Dg6-jE-yF2"/>
@@ -406,6 +407,59 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UaY-TW-92X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-487" y="1973"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="07V-lH-nol">
+            <objects>
+                <viewController id="pdx-eQ-HhE" customClass="SearchTableViewController" customModule="Day_Start" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7DC-s7-j7C">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="9wP-r5-JMw">
+                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UXR-jU-7Rb">
+                                <rect key="frame" x="0.0" y="100" width="414" height="713"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="locationCell" id="F5f-se-Kp9">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="F5f-se-Kp9" id="WMc-34-cue">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="pdx-eQ-HhE" id="BDN-ua-Pcj"/>
+                                    <outlet property="delegate" destination="pdx-eQ-HhE" id="9GD-VJ-jHw"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="K9z-zi-zY9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="K9z-zi-zY9" firstAttribute="bottom" secondItem="UXR-jU-7Rb" secondAttribute="bottom" id="0DB-4A-3ZE"/>
+                            <constraint firstItem="9wP-r5-JMw" firstAttribute="leading" secondItem="K9z-zi-zY9" secondAttribute="leading" id="4Ac-Z1-1Mo"/>
+                            <constraint firstItem="UXR-jU-7Rb" firstAttribute="leading" secondItem="K9z-zi-zY9" secondAttribute="leading" id="8Xp-Ng-DMS"/>
+                            <constraint firstItem="UXR-jU-7Rb" firstAttribute="top" secondItem="9wP-r5-JMw" secondAttribute="bottom" id="ax1-SS-Vdt"/>
+                            <constraint firstItem="K9z-zi-zY9" firstAttribute="trailing" secondItem="9wP-r5-JMw" secondAttribute="trailing" id="ntR-M0-B7I"/>
+                            <constraint firstItem="K9z-zi-zY9" firstAttribute="trailing" secondItem="UXR-jU-7Rb" secondAttribute="trailing" id="vxI-i3-Gr6"/>
+                            <constraint firstItem="9wP-r5-JMw" firstAttribute="top" secondItem="K9z-zi-zY9" secondAttribute="top" id="we7-ih-A6R"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="7qs-os-uZq"/>
+                    <connections>
+                        <outlet property="locationSearchBar" destination="9wP-r5-JMw" id="a0Z-0g-dTK"/>
+                        <outlet property="locationTableView" destination="UXR-jU-7Rb" id="9Au-13-Dgy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wT4-u6-Qgj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2210.144927536232" y="1287.7232142857142"/>
         </scene>
     </scenes>
     <resources>
